incomes yearly line chart set up

--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -191,19 +191,46 @@
         </section>
     </div>
 
+    <div id="stats-container">
+        <div class="d-flex justify-content-center my-2">
+            <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
+            <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
+                <h5 class="mb-3 text-light">Select a year for the report</h5>
+            
+                <select class="form-select dark-select" id="year-select">
+                    <option value="2026" selected>2026</option>
+                    <option value="2025">2025</option>
+                </select>
+            </div>
+            </div>
+        </div>
+
+        <div class="border rounded-3 w-100 p-2">
+            <h3 class="text-center" id="chart-title">Incomes Stats</h3>
+
+            <div class="chart-container">
+                <canvas id="yearly-stats"></canvas>
+            </div>
+        </div>
+        <input  type="hidden" name="" id="yearly-single-model-report-endpoint" value="{{ url_for('stats.yearly_single_model_report' ) }}">
+    </div>
+    
     <input type="hidden" name="" id="filter-data-endpoint" value="{{ url_for('income.filter_all' ) }}">
-
-
-<link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
-<script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
-<script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js' ) }}"></script>
-<script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
-<script type="module" src="{{ url_for('static', filename='scripts/incomes/filterData.js' ) }}"></script>
+    
+    
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    
+    <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js' ) }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/incomes/filterData.js' ) }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/incomes/stats.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/utils/generateChart.js' ) }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
