modified chart title text content

--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -293,7 +293,7 @@
         </div>
 
         <div class="border rounded-3 w-100 p-2">
-            <h3 class="text-center" id="chart-title">Accounts Receivable Stats</h3>
+            <h3 class="text-center" id="chart-title">Loans Stats</h3>
 
             <div class="chart-container">
                 <canvas id="yearly-stats"></canvas>
