deposits  yearly line chart set up

--- a/app/templates/deposits/index.html
+++ b/app/templates/deposits/index.html
@@ -169,8 +169,33 @@
         <p id="lbl-total-deposits">Total Deposits: ${{ total_amount(deposits) }}</p>
     </div>
 
-    <input type="hidden" name="" id="filter-data-endpoint" value="{{ url_for('deposit.filter_all' ) }}">
 
+    <div id="stats-container">
+        <div class="d-flex justify-content-center my-2">
+            <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
+            <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
+                <h5 class="mb-3 text-light">Select a year for the report</h5>
+            
+                <select class="form-select dark-select" id="year-select">
+                    <option value="2026" selected>2026</option>
+                    <option value="2025">2025</option>
+                </select>
+            </div>
+            </div>
+        </div>
+
+        <div class="border rounded-3 w-100 p-2">
+            <h3 class="text-center" id="chart-title">Deposits Stats</h3>
+
+            <div class="chart-container">
+                <canvas id="yearly-stats"></canvas>
+            </div>
+        </div>
+        <input  type="hidden" name="" id="yearly-single-model-report-endpoint" value="{{ url_for('stats.yearly_single_model_report' ) }}">
+    </div>
+    
+    <input type="hidden" name="" id="filter-data-endpoint" value="{{ url_for('deposit.filter_all' ) }}">
+    
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
@@ -183,7 +208,10 @@
 <script type="module" src="{{ url_for('static', filename='scripts/deposits/filterData.js') }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/utils/stringHandling.js' ) }}"></script>
-
+<script type="module" src="{{ url_for('static', filename='scripts/deposits/stats.js') }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/utils/generateChart.js' ) }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
         const createWithdrawalModal = document.getElementById('create-deposit-model');
