--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -171,15 +171,27 @@
                 </div>
             </form>
         </section>
+
         <div class="w-100">
-            <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap">
-                <button type="button" 
-                        class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
-                        style="max-width: 200px;"
-                        data-bs-toggle="modal" 
-                        data-bs-target="#create-account-receivable">
-                    New Account Receivable
-                </button>
+            <div class="d-flex flex-column flex-md-row align-items-stretch align-items-md-center gap-2">
+                <div class="d-flex gap-2">
+                    <button type="button" 
+                            class="btn btn-outline-primary" 
+                            data-bs-toggle="modal" 
+                            data-bs-target="#create-account-receivable">
+                        New Account Receivable 
+                    </button>
+                    <a 
+                        href="{{ url_for('accounts_receivable.see_all_loan_payments' ) }}" 
+                        class="btn btn-light"
+                    >
+                        All Payments
+                    </a>
+                </div> 
+                
+                <!-- SPACER -->
+                <div class="flex-grow-1"></div>
+
                 <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
                     <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
                         <input type="text" class="form-control" id="filter-byfiled-input-id" placeholder="Enter some text...">
