--- a/app/templates/accounts_payable/index.html
+++ b/app/templates/accounts_payable/index.html
@@ -175,14 +175,26 @@
         </section>
 
         <div class="w-100">
-            <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap">
-                <button type="button" 
-                        class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
-                        style="max-width: 200px;"
-                        data-bs-toggle="modal" 
-                        data-bs-target="#create-account-payable">
-                    New Account Payable
-                </button>
+            <div class="d-flex flex-column flex-md-row align-items-stretch align-items-md-center gap-2">
+                <div class="d-flex gap-2">
+                    <button type="button" 
+                            class="btn btn-outline-primary" 
+                            style="max-width: 200px;"
+                            data-bs-toggle="modal" 
+                            data-bs-target="#create-account-payable">
+                        New Account Payable
+                    </button>
+                    <a 
+                        href="{{ url_for('debt_payment.see_all_debt_payments' ) }}" 
+                        class="btn btn-light"
+                    >
+                        All Debt Payments
+                    </a>
+                </div>
+
+                <!-- SPACER -->
+                <div class="flex-grow-1"></div>
+
                 <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
                     <div class="w-100 w-md-auto mt-md-0" style="max-width: 320px;">
                         <input type="text" class="form-control" id="filter-byfiled-input-id" placeholder="Enter some text...">
