--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -185,7 +185,7 @@
                         href="{{ url_for('accounts_receivable.see_all_loan_payments' ) }}" 
                         class="btn btn-light"
                     >
-                        All Payments
+                        All Loan Payments
                     </a>
                 </div> 
                 
