--- a/app/templates/accounts_receivable/loan_payments.html
+++ b/app/templates/accounts_receivable/loan_payments.html
@@ -26,7 +26,7 @@
                 <thead class="sticky-top">
                     <tr>
                     <th scope="col"># Id</th>
-                    <th scope="col">Payment Cod.</th>
+                    <th scope="col">Loan PMT Cod.</th>
                     <th scope="col">Amount</th>
                     <th scope="col">Is Cash</th>
                     <th scope="col">Loan Cod. (Owner)</th>
