set up line chart for debt payments report through the year

--- a/app/templates/accounts_payable/debt_payments.html
+++ b/app/templates/accounts_payable/debt_payments.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="border rounded-3 w-100 p-2">
-            <h3 class="text-center" id="chart-title">Incomes Stats</h3>
+            <h3 class="text-center" id="chart-title">Debt Payments Stats</h3>
 
             <div class="chart-container">
                 <canvas id="yearly-stats"></canvas>
@@ -95,7 +95,7 @@
     <script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js' ) }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/incomes/filterData.js' ) }}"></script>
-    <script type="module" src="{{ url_for('static', filename='scripts/incomes/stats.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/accounts_payable/debt_payments/stats.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/utils/generateChart.js' ) }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
