--- a/app/templates/accounts_receivable/loan_payments.html
+++ b/app/templates/accounts_receivable/loan_payments.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="border rounded-3 w-100 p-2">
-            <h3 class="text-center" id="chart-title">Incomes Stats</h3>
+            <h3 class="text-center" id="chart-title">Loan Payments Stats</h3>
 
             <div class="chart-container">
                 <canvas id="yearly-stats"></canvas>
@@ -82,7 +82,7 @@
         <input  type="hidden" name="" id="yearly-single-model-report-endpoint" value="{{ url_for('stats.yearly_single_model_report' ) }}">
     </div>
     
-    <input type="hidden" name="" id="filter-data-endpoint" value="{{ url_for('income.filter_all' ) }}">
+    <input type="hidden" name="" id="filter-data-endpoint" value="#">
     
     
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
@@ -94,8 +94,8 @@
     <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js' ) }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
-    <script type="module" src="{{ url_for('static', filename='scripts/incomes/filterData.js' ) }}"></script>
-    <script type="module" src="{{ url_for('static', filename='scripts/incomes/stats.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/accounts_receivable/filterData.js' ) }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/accounts_receivable/loan_payments/stats.js') }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/utils/generateChart.js' ) }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
