--- a/app/templates/accounts_payable/debt_payments.html
+++ b/app/templates/accounts_payable/debt_payments.html
@@ -65,8 +65,9 @@
                 <h5 class="mb-3 text-light">Select a year for the report</h5>
             
                 <select class="form-select dark-select" id="year-select">
-                    <option value="2026" selected>2026</option>
-                    <option value="2025">2025</option>
+                    {% for year in years %}
+                        <option value="{{ year }}">{{ year }}</option>
+                    {% endfor %}
                 </select>
             </div>
             </div>
