--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -30,6 +30,21 @@
     <a href="{{ url_for('bank_account.index') }}" class="btn btn-outline-light fs-5"><i class="bi bi-arrow-return-left"></i></a>
     <a href="{{ url_for('bank_account.associated_records', bank_account_id=bank_account.id ) }}" class="btn btn-outline-primary"><i class="bi bi-diagram-3-fill"></i></a>
 </div>
+
+<div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
+    <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
+        <h5 class="mb-3 text-light">Select a year for the report</h5>
+    
+        <select class="form-select dark-select" id="year-select">
+            {% for year in years %}    
+                <option value="{{ year }}">{{ year }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    </div>
+</div>
+
 <div class="container border rounded-3 mt-2">
     <div class="row align-items-stretch text-center my-2">
          <h3>Yearly Cash Flow Chart</h3>
