--- a/app/templates/credit_cards/associated_records.html
+++ b/app/templates/credit_cards/associated_records.html
@@ -5,7 +5,6 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Expenses</h3>
     <section class="modal fade" tabindex="-1" id="edit-credit-card-payment">
         <form id="edit-credit-card-payment-form">
             <input type="hidden" name="credit-card-payment-id" id="p-credit-card-payment-id">
@@ -46,6 +45,20 @@
         </form>
     </section>
     <a href="{{ url_for('credit_card.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
+
+    <div class="d-flex justify-content-center my-2">
+        <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
+        <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
+            <h5 class="mb-3 text-light">Select a year for the report</h5>
+        
+            <select class="form-select dark-select" id="year-select">
+                {% for year in years %}    
+                    <option value="{{ year }}">{{ year }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        </div>
+    </div>
 
     <div class="my-3 border rounded-3">
         <div class="rounded-top d-flex align-items-center justify-content-center p-2" style="height: 60px; background-color: #ff0000;">
