--- a/app/templates/credit_cards/associated_records.html
+++ b/app/templates/credit_cards/associated_records.html
@@ -46,17 +46,27 @@
     </section>
     <a href="{{ url_for('credit_card.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
 
-    <div class="d-flex justify-content-center my-2">
-        <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
-        <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
-            <h5 class="mb-3 text-light">Select a year for the report</h5>
-        
-            <select class="form-select dark-select" id="year-select">
-                {% for year in years %}    
-                    <option value="{{ year }}">{{ year }}</option>
-                {% endfor %}
-            </select>
+    <div id="stats-container">
+        <div class="d-flex justify-content-center my-2">
+            <div class="d-flex justify-content-cente w-100" style="max-width: 320px;">
+            <div class="border-top border-start border-end border-bottom rounded-3 p-3 w-100">
+                <h5 class="mb-3 text-light">Select a year for the report</h5>
+            
+                <select class="form-select dark-select" id="year-select">
+                    {% for year in years %}    
+                        <option value="{{ year }}">{{ year }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            </div>
         </div>
+
+        <div class="border rounded-3 w-100 p-2">
+            <h3 class="text-center" id="chart-title">Stats</h3>
+
+            <div class="chart-container">
+                <canvas id="yearly-stats"></canvas>
+            </div>
         </div>
     </div>
 
@@ -172,11 +182,19 @@
         </div>
     </div>
     <p class="d-none" id="associated-records-endpoint-id">{{ url_for('credit_card.associated_records_in_json', id=credit_card.id ) }}</p>
+    <input type="hidden" name="" id="yearly-single-model-report-endpoint" value="{{ url_for('stats.yearly_single_model_report' ) }}">
+
+
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script> 
     <script type="module" src="{{ url_for('static', filename='scripts/utils/dynamicTables.js' ) }}"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/credit_cards/filterAssociatedRecords.js' ) }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/credit_cards/stats.js') }}"></script>
+    <script type="module" src="{{ url_for('static', filename='scripts/utils/generateChart.js' ) }}"></script>
+
+
     <script>
         document.addEventListener('DOMContentLoaded', e => {
             const editCreditCardPaymentModal = document.getElementById('edit-credit-card-payment');
