--- a/app/templates/accounts_payable/index.html
+++ b/app/templates/accounts_payable/index.html
@@ -237,7 +237,7 @@
                         <td>{{ debt.description }}</td>
                         <td>{{ 'YES' if debt.is_cash else 'NO'  }}</td>
                         <td>{{ debt.bank_account.nick_name if debt.bank_account else '-' }}</td>
-                        <td>{{ debt.created_at }}</td>
+                        <td>{{ debt.created_at | format_datetime("EEE, dd MMM yyyy hh:mm a") }}</td>
                         <td>
                             <div class="d-flex gap-2">
                                 <button 
