--- a/app/templates/bank_accounts/index.html
+++ b/app/templates/bank_accounts/index.html
@@ -196,7 +196,7 @@
                     <td>{{ bank_account.bank.name }}</td>
                     <td>{{ format_amount(bank_account.amount_available) }}</td>
                     <td>{{ bank_account.is_active }}</td>
-                    <td>{{ bank_account.created_at }}</td>
+                    <td>{{ bank_account.created_at | format_datetime("EEE, dd MMM yyyy hh:mm a") }}</td>
                     <td>
                         <div class="d-flex gap-2">
                             <button 
