--- a/app/templates/credit_cards/ledger.html
+++ b/app/templates/credit_cards/ledger.html
@@ -43,7 +43,7 @@
                         <td>{{ format_amount(ledger.amount) }}</td>
                         <td>{{ format_amount(ledger.before_update_balance) }}</td>
                         <td>{{ format_amount(ledger.after_update_balance) }}</td>
-                        <td>{{ ledger.created_at }}</td>
+                        <td>{{ ledger.created_at | format_datetime("EEE, dd MMM yyyy hh:mm a") }}</td>
                     </tr>
                   {% endfor %}
                 </tbody>
