table to show yearly data of each module except bank transfers set up in home template

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -44,7 +44,12 @@
     </div>
 </div>
 
+<div class="table-responsive border rounded-3 my-2">
+    <table id="yearly-report-table" class="table table-hover table-bordered text-start">
+        
+    </table>
 </div>
+
 
 <input type="hidden" name="" id="yearly-stats-all-models-endpoint" value="{{ url_for('stats.yearly_all_model_reports' ) }}">
 <input type="hidden" name="" id="yearly-incomes-and-outgoings-endpoint" value="{{ url_for('stats.yearly_incomes_and_outgoings' ) }}">
